preparing for array manipulations.

--- a/cpp-folders/CMakeLists.txt
+++ b/cpp-folders/CMakeLists.txt
@@ -3,6 +3,9 @@ cmake_minimum_required(VERSION 3.18)
 project("cpp-software-renderer-exps")
 
 set(CMAKE_CXX_STANDARD 20)
+
+list(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake/sdl2)
+
 FIND_PACKAGE(Threads COMPONENTS REQUIRED)
 
 #if(WIN32)
