--- a/cpp-folders/src/hello-pixel/CMakeLists.txt
+++ b/cpp-folders/src/hello-pixel/CMakeLists.txt
@@ -1,21 +1,16 @@
 project(HelloPixel)
 
-#find_package(Boost COMPONENTS REQUIRED)
-#find_package(Threads COMPONENTS REQUIRED)
 find_package(SDL2 REQUIRED)
-include_directories(${SDL2_INCLUDE_DIRS})
+find_package(SDL2_image REQUIRED)
+
+include_directories(${SDL2_INCLUDE_DIRS} ${SDL2_IMAGE_INCLUDE_DIR})
 
 set(CMAKE_CXX_STANDARD 20)
 #set(CMAKE_CXX_FLAGS "")
 
-#include_directories(${Boost_INCLUDE_DIR})
-#link_directories(${Boost_LIBRARY_DIR})
 
-add_executable(HelloPixel hello_pixel.cpp tgaimage.cpp)
-target_link_libraries(HelloPixel Threads::Threads)
-
-add_executable(HelloLine hello_line.cpp tgaimage.cpp)
-target_link_libraries(HelloLine Threads::Threads)
+add_executable(HelloPixel hello_pixel.cpp)
+target_link_libraries(HelloPixel PRIVATE ${SDL2_IMAGE_LIBRARIES} ${SDL2_LIBRARIES})
 
 add_executable(HelloSDLPixel hello_sdl_pixel.cpp)
 target_link_libraries(HelloSDLPixel Threads::Threads ${SDL2_LIBRARIES})
