--- a/cpp-folders/CMakeLists.txt
+++ b/cpp-folders/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.18)
 
-project("cpp-software-renderer-exps")
+project("leisure-software-renderer")
 
 set(CMAKE_CXX_STANDARD 20)
 
@@ -12,4 +12,4 @@ FIND_PACKAGE(Threads COMPONENTS REQUIRED)
 #    set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${PROJECT_SOURCE_DIR}/windows-cmakes/")
 #endif()
 
-add_subdirectory("src/hello-pixel")
+add_subdirectory("src/hello-pixel-primitives")
