added rapidobj library to cmake

--- a/cpp-folders/CMakeLists.txt
+++ b/cpp-folders/CMakeLists.txt
@@ -12,4 +12,15 @@ FIND_PACKAGE(Threads COMPONENTS REQUIRED)
 #    set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${PROJECT_SOURCE_DIR}/windows-cmakes/")
 #endif()
 
+# actions for rapidobj loader library
+include(FetchContent)
+
+FetchContent_Declare(
+    rapidobj
+    GIT_REPOSITORY https://github.com/guybrush77/rapidobj.git
+    GIT_TAG v1.0.1
+    GIT_SHALLOW ON
+)
+FetchContent_MakeAvailable(rapidobj)
+
 add_subdirectory("src/hello-pixel-primitives")
