rapidobj library related changed

--- a/cpp-folders/CMakeLists.txt
+++ b/cpp-folders/CMakeLists.txt
@@ -15,12 +15,11 @@ FIND_PACKAGE(Threads COMPONENTS REQUIRED)
 # actions for rapidobj loader library
 include(FetchContent)
 
-FetchContent_Declare(
-    rapidobj
-    GIT_REPOSITORY https://github.com/guybrush77/rapidobj.git
-    GIT_TAG v1.0.1
-    GIT_SHALLOW ON
-)
-FetchContent_MakeAvailable(rapidobj)
+#FetchContent_Declare(
+#    rapidobj
+#    GIT_REPOSITORY  https://github.com/guybrush77/rapidobj.git
+#    GIT_TAG         origin/master
+#    )
+#FetchContent_MakeAvailable(rapidobj)
 
 add_subdirectory("src/hello-pixel-primitives")
