--- a/cpp-folders/src/hello-pixel-primitives/CMakeLists.txt
+++ b/cpp-folders/src/hello-pixel-primitives/CMakeLists.txt
@@ -24,7 +24,7 @@ set(CMAKE_CXX_FLAGS_RELEASE "-O3")
 add_executable(HelloPixel hello_pixel.cpp shs_renderer.hpp)
 target_link_libraries(HelloPixel PRIVATE ${SDL2_IMAGE_LIBRARIES} ${SDL2_LIBRARIES})
 
-add_executable(HelloSDLPixel hello_sdl_pixel.cpp)
+add_executable(HelloSDLPixel hello_sdl_pixel.cpp shs_renderer.hpp)
 target_link_libraries(HelloSDLPixel Threads::Threads ${SDL2_LIBRARIES})
 
 add_executable(HelloLine hello_line.cpp shs_renderer.hpp)
