moved library files to the different folder.

--- a/cpp-folders/CMakeLists.txt
+++ b/cpp-folders/CMakeLists.txt
@@ -15,4 +15,5 @@ FIND_PACKAGE(Threads COMPONENTS REQUIRED)
 
 
 
+add_subdirectory("src/shs-renderer")
 add_subdirectory("src/hello-pixel-primitives")
