added different folder for shader related experiments.

--- a/cpp-folders/CMakeLists.txt
+++ b/cpp-folders/CMakeLists.txt
@@ -17,3 +17,4 @@ FIND_PACKAGE(Threads COMPONENTS REQUIRED)
 
 add_subdirectory("src/shs-renderer")
 add_subdirectory("src/hello-pixel-primitives")
+add_subdirectory("src/hello-shaders")
