looks like there is some inconsistency between display coordnitates. I'll fix it later.

--- a/cpp-folders/src/hello-shaders/CMakeLists.txt
+++ b/cpp-folders/src/hello-shaders/CMakeLists.txt
@@ -28,3 +28,5 @@ target_link_libraries(HelloFragmentShader Threads::Threads ${SDL2_LIBRARIES})
 add_executable(HelloColorMix hello_color_mix.cpp ../shs-renderer/shs_renderer.hpp)
 target_link_libraries(HelloColorMix Threads::Threads ${SDL2_LIBRARIES})
 
+add_executable(HelloColorGradient hello_color_gradient.cpp ../shs-renderer/shs_renderer.hpp)
+target_link_libraries(HelloColorGradient Threads::Threads ${SDL2_LIBRARIES})
