about to experiment various concurrency model for CPU in order to speed up pixel processing, and preparing to use coroutine job system called Pal Tasks.

--- a/cpp-folders/CMakeLists.txt
+++ b/cpp-folders/CMakeLists.txt
@@ -13,8 +13,19 @@ FIND_PACKAGE(Threads COMPONENTS REQUIRED)
 #    set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${PROJECT_SOURCE_DIR}/windows-cmakes/")
 #endif()
 
+include(FetchContent)
+
+# C++20 coroutine based job system
+FetchContent_Declare(
+    pal_tasks
+    GIT_REPOSITORY https://github.com/tgfrerer/pal_tasks.git
+    GIT_TAG main
+    GIT_SHALLOW ON
+)
+FetchContent_MakeAvailable(pal_tasks)
 
 
 add_subdirectory("src/shs-renderer")
 add_subdirectory("src/hello-pixel-primitives")
 add_subdirectory("src/hello-shaders")
+add_subdirectory("src/hello-parallelization")
