little bit cmake house cleaning.

--- a/cpp-folders/src/hello-parallelization/CMakeLists.txt
+++ b/cpp-folders/src/hello-parallelization/CMakeLists.txt
@@ -11,9 +11,9 @@ endif()
 
 include_directories(${SDL2_INCLUDE_DIRS} ${SDL2_IMAGE_INCLUDE_DIR})
 include_directories(${CMAKE_BINARY_DIR})
+include_directories(${SHSRenderer_SOURCE_DIR}/)
 include_directories(${pal_tasks_SOURCE_DIR}/src/)
 
-include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../shs-renderer)
 
 set(CMAKE_CXX_STANDARD 20)
 if(NOT CMAKE_BUILD_TYPE)
@@ -24,10 +24,14 @@ set(CMAKE_CXX_FLAGS_DEBUG "-g")
 set(CMAKE_CXX_FLAGS_RELEASE "-O3")
 
 
-add_executable(HelloNestedLoops hello_nested_loops.cpp ../shs-renderer/shs_renderer.hpp)
+add_executable(HelloNestedLoops hello_nested_loops.cpp
+  ${SHSRenderer_SOURCE_DIR}/shs_renderer.hpp
+  )
 target_link_libraries(HelloNestedLoops Threads::Threads ${SDL2_LIBRARIES} glm::glm)
 
-add_executable(HelloThreadJobs hello_thread_jobs.cpp ../shs-renderer/shs_renderer.hpp)
+add_executable(HelloThreadJobs hello_thread_jobs.cpp 
+  ${SHSRenderer_SOURCE_DIR}/shs_renderer.hpp
+)
 target_link_libraries(HelloThreadJobs Threads::Threads ${SDL2_LIBRARIES} glm::glm)
 
 add_executable(PalTasksDemo pal_tasks_demo.cpp
