--- a/cpp-folders/src/hello-shaders/CMakeLists.txt
+++ b/cpp-folders/src/hello-shaders/CMakeLists.txt
@@ -11,8 +11,7 @@ endif()
 
 include_directories(${SDL2_INCLUDE_DIRS} ${SDL2_IMAGE_INCLUDE_DIR})
 include_directories(${CMAKE_BINARY_DIR})
-
-include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../shs-renderer)
+include_directories(${SHSRenderer_SOURCE_DIR}/)
 
 set(CMAKE_CXX_STANDARD 20)
 if(NOT CMAKE_BUILD_TYPE)
@@ -23,23 +22,37 @@ set(CMAKE_CXX_FLAGS_DEBUG "-g")
 set(CMAKE_CXX_FLAGS_RELEASE "-O3")
 
 
-add_executable(HelloColorMix hello_color_mix.cpp ../shs-renderer/shs_renderer.hpp)
+add_executable(HelloColorMix hello_color_mix.cpp 
+  ${SHSRenderer_SOURCE_DIR}/shs_renderer.hpp
+  )
 target_link_libraries(HelloColorMix Threads::Threads ${SDL2_LIBRARIES})
 
-add_executable(HelloColorGradient hello_color_gradient.cpp ../shs-renderer/shs_renderer.hpp)
+add_executable(HelloColorGradient hello_color_gradient.cpp 
+  ${SHSRenderer_SOURCE_DIR}/shs_renderer.hpp
+  )
 target_link_libraries(HelloColorGradient Threads::Threads ${SDL2_LIBRARIES})
 
-add_executable(HelloColorHSB hello_color_hsb.cpp ../shs-renderer/shs_renderer.hpp)
+add_executable(HelloColorHSB hello_color_hsb.cpp 
+  ${SHSRenderer_SOURCE_DIR}/shs_renderer.hpp
+  )
 target_link_libraries(HelloColorHSB Threads::Threads ${SDL2_LIBRARIES})
 
-add_executable(HelloColorHSBPolar hello_color_hsb_polar.cpp ../shs-renderer/shs_renderer.hpp)
+add_executable(HelloColorHSBPolar hello_color_hsb_polar.cpp 
+  ${SHSRenderer_SOURCE_DIR}/shs_renderer.hpp
+  )
 target_link_libraries(HelloColorHSBPolar Threads::Threads ${SDL2_LIBRARIES})
 
-add_executable(HelloFractalBrownianMotion hello_fbm.cpp ../shs-renderer/shs_renderer.hpp)
+add_executable(HelloFractalBrownianMotion hello_fbm.cpp 
+  ${SHSRenderer_SOURCE_DIR}/shs_renderer.hpp
+  )
 target_link_libraries(HelloFractalBrownianMotion Threads::Threads ${SDL2_LIBRARIES} glm::glm)
 
-add_executable(HelloGreenNoise hello_green_noise.cpp ../shs-renderer/shs_renderer.hpp)
+add_executable(HelloGreenNoise hello_green_noise.cpp 
+  ${SHSRenderer_SOURCE_DIR}/shs_renderer.hpp
+  )
 target_link_libraries(HelloGreenNoise Threads::Threads ${SDL2_LIBRARIES} glm::glm)
 
-add_executable(HelloMongolianFlag hello_mongolian_flag.cpp ../shs-renderer/shs_renderer.hpp)
+add_executable(HelloMongolianFlag hello_mongolian_flag.cpp 
+  ${SHSRenderer_SOURCE_DIR}/shs_renderer.hpp
+  )
 target_link_libraries(HelloMongolianFlag Threads::Threads ${SDL2_LIBRARIES} glm::glm)
