brought some entity component system library might be useful.

--- a/cpp-folders/CMakeLists.txt
+++ b/cpp-folders/CMakeLists.txt
@@ -9,6 +9,36 @@ list(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake/assimp)
 
 FIND_PACKAGE(Threads COMPONENTS REQUIRED)
 
+include(FetchContent)
+
+message(STATUS "Fetching stb library...")
+FetchContent_Declare(
+    stb
+    GIT_REPOSITORY https://github.com/nothings/stb.git
+)
+FetchContent_MakeAvailable(stb)
+
+
+message(STATUS "Fetching Entt")
+FetchContent_Declare(
+    entt
+    GIT_REPOSITORY https://github.com/skypjack/entt.git
+)
+FetchContent_MakeAvailable(entt)
+
+#
+# Too slow to fetch on my machine
+#
+#message(STATUS "Fetching flecs library...")
+#FetchContent_Declare(
+#    flecs
+#    GIT_REPOSITORY https://github.com/SanderMertens/flecs.git
+#    GIT_TAG ae0bed2815127d3c8315e9e4c3edb253ea8a91c4 # v3.2.7
+#)
+#FetchContent_MakeAvailable(flecs)
+
+
+message(STATUS "Adding sub folders...")
 
 add_subdirectory("src/shs-renderer")
 add_subdirectory("src/hello-pixel-primitives")
