--- a/cpp-folders/src/hello-parallelization/CMakeLists.txt
+++ b/cpp-folders/src/hello-parallelization/CMakeLists.txt
@@ -11,6 +11,7 @@ if(ASSIMP_FOUND)
 endif() 
 include_directories(${SDL2_INCLUDE_DIRS} ${SDL2_IMAGE_INCLUDE_DIR})
 include_directories(${CMAKE_BINARY_DIR})
+include_directories(${stb_SOURCE_DIR}/)
 include_directories(${SHSRenderer_SOURCE_DIR}/)
 include_directories(${Boost_INCLUDE_DIR})
 link_directories(${Boost_LIBRARY_DIR})
