--- a/cpp-folders/src/shs-renderer/CMakeLists.txt
+++ b/cpp-folders/src/shs-renderer/CMakeLists.txt
@@ -11,3 +11,4 @@ endif()
 
 include_directories(${SDL2_INCLUDE_DIRS} ${SDL2_IMAGE_INCLUDE_DIR})
 include_directories(${CMAKE_BINARY_DIR})
+include_directories(${stb_SOURCE_DIR}/)
