--- a/cpp-folders/src/hello-pixel-primitives/CMakeLists.txt
+++ b/cpp-folders/src/hello-pixel-primitives/CMakeLists.txt
@@ -25,26 +25,14 @@ set(CMAKE_CXX_FLAGS_RELEASE "-O3")
 
 
 
-add_executable(HelloPixel hello_pixel.cpp 
-  ${SHSRenderer_SOURCE_DIR}/shs_renderer.hpp
-  )
+add_executable(HelloPixel hello_pixel.cpp)
 target_link_libraries(HelloPixel PRIVATE ${SDL2_IMAGE_LIBRARIES} ${SDL2_LIBRARIES})
 
 
-add_executable(HelloSDLPixel hello_sdl_pixel.cpp 
-  ${SHSRenderer_SOURCE_DIR}/shs_renderer.hpp
-  )
-target_link_libraries(HelloSDLPixel Threads::Threads ${SDL2_LIBRARIES})
-
-
-add_executable(HelloLine hello_line.cpp 
-  ${SHSRenderer_SOURCE_DIR}/shs_renderer.hpp
-  )
+add_executable(HelloLine hello_line.cpp)
 target_link_libraries(HelloLine PRIVATE ${SDL2_IMAGE_LIBRARIES} ${SDL2_LIBRARIES})
 
 
-add_executable(HelloTriangle hello_triangle.cpp 
-  ${SHSRenderer_SOURCE_DIR}/shs_renderer.hpp
-  )
+add_executable(HelloTriangle hello_triangle.cpp)
 target_link_libraries(HelloTriangle Threads::Threads ${SDL2_LIBRARIES} glm::glm)
 
