little bit house cleaning.

--- a/cpp-folders/src/hello-3d-primitives/CMakeLists.txt
+++ b/cpp-folders/src/hello-3d-primitives/CMakeLists.txt
@@ -12,7 +12,7 @@ endif()
 include_directories(${SDL2_INCLUDE_DIRS} ${SDL2_IMAGE_INCLUDE_DIR})
 include_directories(${CMAKE_BINARY_DIR})
 include_directories(${stb_SOURCE_DIR}/)
-include_directories(${entt_SOURCE_DIR}/src/)
+#include_directories(${entt_SOURCE_DIR}/src/)
 
 include_directories(${SHSRenderer_SOURCE_DIR}/)
 
@@ -37,10 +37,4 @@ add_executable(Hello3DObject hello_3d_object.cpp)
 target_link_libraries(Hello3DObject PRIVATE ${SDL2_IMAGE_LIBRARIES} ${SDL2_LIBRARIES} glm::glm -lassimp)
 
 
-add_executable(HelloEntt hello_entt.cpp)
-target_link_libraries(Hello3DObject PRIVATE ${SDL2_IMAGE_LIBRARIES} ${SDL2_LIBRARIES} glm::glm -lassimp EnTT::EnTT)
-
-
-add_executable(HelloObjFormat hello_obj_format.cpp)
-target_link_libraries(HelloObjFormat PRIVATE ${SDL2_IMAGE_LIBRARIES} ${SDL2_LIBRARIES} glm::glm)
 
